--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,12 @@ galaxy_info:
     - name: ArchLinux
       versions:
         - all
+    - name: Debian
+      versions:
+        - 12
+    - name: Ubuntu
+      versions:
+        - 24.04
   galaxy_tags:
     - proxmox
 dependencies: []
