--- a/vars/archlinux.yml
+++ b/vars/archlinux.yml
@@ -2,6 +2,7 @@
 # vars file of pve_clone
 
 os_supported: true
-python_module_pkgs:
+linux_pkgs:
   - python-setuptools
   - python-proxmoxer
+python_module_pkgs: []
