--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,6 +7,9 @@ galaxy_info:
   license: MIT
   min_ansible_version: "2.11"
   platforms:
+    - name: EL
+      versions:
+        - 9
     - name: ArchLinux
       versions:
         - all
